fixed the scaling on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-    font: 24px "Century Gothic", Futura, sans-serif;
+    font: 14px "Century Gothic", Futura, sans-serif;
     margin: 20px;
     background-color: #ffd9b3;
   }
@@ -22,15 +22,15 @@ body {
     background: #fff;
     border: 1px solid #999;
     float: left;
-    font-size: 128px;
+    font-size: 24px;
     font-weight: bold;
     line-height: 34px;
-    height: 128px;
+    height: 34px;
     margin-right: -1px;
     margin-top: -1px;
     padding: 0;
     text-align: center;
-    width: 128px;
+    width: 34px;
   }
   
   .square:focus {
@@ -45,10 +45,6 @@ body {
     display: flex;
     flex-direction: row;
   }
-
-  .game-board {
-    width: 100%;
-  }
   
   .game-info {
     margin-left: 20px;
@@ -61,9 +57,4 @@ body {
 
   .square.highlight {
     background: #008000;
-  }
-
-  button {
-    font-size: 24px;
-    background-color: #fff;
   }
